<resources>
    <string name="app_name">Scooter Sharing</string>
    <string name="name">Enter the scooter name</string>
    <string name="location">The current scooter location</string>
    <string name="start_ride">Start Ride</string>
    <string name="update_ride">Update Ride</string>
    <string name="delete_ride">Delete Ride</string>
    <string name="list_ride_button">List Rides</string>
    <string name="scooter_name">%s</string>
    <string name="scooter_location">%s</string>
    <string name="scooter_time">%s</string>
    <string name="launch_activity">%s</string>
    <string name="remove_location_updates">%s</string>
    <string name="location_updated">%s</string>
    <string name="fragment_alert">Alert Dialog</string>
    <string name="alert_supporting_text">Do you want to perform this action?</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="started">started</string>
    <string name="updated">updated</string>
    <string name="ride_deleted">Ride deleted</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="action_sign_out">Sign out</string>
    <string name="content_description_sign_out">Sign out</string>
    <string name="content_description_image">Image</string>
    <string name="firebase_authentication">Firebase\nAuthentication</string>
    <string name="firebase_user_description">You are logged in as %s.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_name">Enter the location</string>
    <string name="dialog_title">Adding new entry</string>
    <string name="dialog_message">Create a new data in the database</string>
    <string name="dialog_update_title">Update ride</string>
    <string name="dialog_update_message">%s</string>
    <string name="update_button">Update</string>
    <string name="cancel_button">Cancel</string>
    <string name="Update_info">Hold down a ride to update it</string>
    <string name="content_description_add">Add</string>
    <string name="ride_history">Ride History</string>
    <string name="reserve_ride">Reserve</string>
    <string name="view_maps">View in Maps</string>
    <string name="edit_info">Hold down a scooter to edit its location</string>
    <string name="end_ride">End Ride</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="capture_button_alt">Capture</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="last_taken_image_text">Last taken image</string>
    <string name="camera_info">Please take a photo of the parked scooter to end your ride.</string>
    <string name="loading_info">Updating your ride... \nPlease wait a moment.</string>
    <string name="alert_scanqr_text">Please scan the QR code on the scooter to start a ride.</string>
    <string name="nearest_scooter">View nearest scooter</string>
    <string name="ride_in_progress">Ride in progress</string>
</resources>